--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "bunny-storm==1.0.28",
     "binance-connector==3.3.0",
     "webull==0.6.1",
-    "ibapi==9.81.1.post1"
+    "ibapi==9.81.1.post1",
+    "pika==0.13.1"
 ]
 [build-system]
 requires = ["setuptools>=67.2.0"]
