--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "binance-connector==3.3.0",
     "webull==0.6.1",
     "ibapi==9.81.1.post1",
-    "pika==1.3.1"
+    "pika==1.3.1",
+    "schedule==1.1.0",
 ]
 [build-system]
 requires = ["setuptools>=67.2.0"]
